--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Site Settings
 name: Milo Brown
-title: Milo Brown | Personal Website
-description: Jekflix is a template for Jekyll inspired by Netflix and made by
-  Thiago Rossener.
+title: Milo Brown | Photonics and Landscape Physiology 
+description: Milo Brown is an undergraduate at the University of California, Santa Barbara.
 tags:
   - blog
   - template
@@ -19,22 +18,19 @@ menu:
     url: /contact
   - title: Feed
     url: /feed.xml
-email: youremail@test.com
+email: brown871@ucsb.edu
 # See: https://disqus.com/
-disqus_username: disqus_username
+# disqus_username: disqus_username
 # Contact Form Setting
 # See: https://formspree.io/
-formspree_form_id: formspree_form_id
+# formspree_form_id: formspree_form_id
 
 
 # Social Media Settings
 # Remove the item if you don't need it
-github_username: github_username
-facebook_username: facebook_username
-twitter_username: twitter_username
-instagram_username: instagram_username
-linkedin_username: linkedin_username
-medium_username: medium_username
+github_username: MiloTBrown
+instagram_username: gunpowder_milo
+linkedin_username: Milo Brown
 
 
 # Posts Settings
