--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ email: brown871@ucsb.edu
 # Remove the item if you don't need it
 github_username: MiloTBrown
 instagram_username: gunpowder_milo
-linkedin_username: Milo Brown
+linkedin_username: https://www.linkedin.com/in/milo-brown/
 
 
 # Posts Settings
