--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
 name: Milo Brown
-title: Milo Brown | UCSB Physics Student
+title: Milo Brown | UCSB Physics Undergrad
 description: Milo Brown is an undergraduate at the University of California, Santa Barbara.
 tags:
   - blog
